# tiny-c

./: ..gitignore.swp  .gitignore  CMakeLists.txt  README.md  local_greet.cc
data/: pithy_large.txt
src/: CMakeLists.txt  greetings.c  greetings.cc  local_greet.c  moon_phase.c  moon_phase.cc  pithy.c  pithy.cc  time.c  time.cc
